--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,11 @@ a:hover {
 
 #TitleHeader {
     position: relative;
-    background-color: #457f96;
+  background: #97d8e7; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, #97d8e7, #fff5e7); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #97d8e7, #fff5e7); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #97d8e7, #fff5e7); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #97d8e7, #fff5e7); /* Standard syntax */
     width: 100%;
 }
 
